P3/ejudge_contests/01/var/archive/xmlreports/0/0/0/000007
Content-type: text/xml

<?xml version="1.0" encoding="utf-8"?>
<testing-report run-id="7" judge-id="8" status="CE" scoring="ACM" run-tests="0" contest-id="301" compile-error="yes" >
  <uuid>3c69c768-1743-40e4-b9ad-8ede21ccecce</uuid>
  <compiler_output>000007.cpp: In function 'int main()':
000007.cpp:26:3: error: expected ';' before '}' token
   }
   ^
000007.cpp:17:9: warning: unused variable 'check' [-Wunused-variable]
    bool check=true;
         ^~~~~
</compiler_output>
</testing-report>
